--- a/apply/css/styles.css
+++ b/apply/css/styles.css
@@ -93,7 +93,7 @@ h3 {
 footer {
   text-align: center;
   font-size: 0.85em;
-  background-color: #1d396d
+  background-color: #1d396d;
   color: #e3eaf8;
   padding: 1% 0%;
 }
