--- a/analyze/css/styles.css
+++ b/analyze/css/styles.css
@@ -1,35 +1,89 @@
+/*
+Author: Stephen Davis
+Date: September 28, 2022
+File Name: styles.html
+*/
+
+/*CSS Reset */
+body, header, nav, main, footer, img, h1, h3 {
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
+
 #css1, #css2, #css3 {
-    width: 40%;
+    width: 30%;
     float: left;
     padding: 0 1%;
-}footer {
+    text-decoration: none;
+}
+
+/*Style rules for body content*/
+body {
+    padding 2%;
+    background-color: #d1d1e0;
+}
+
+/*Style rules for header content*/
+header h1 {
+    font-size: 3em;
+    font-family: Georgia, Times, serif;
+    padding: 3%;
+    color: #47476b;
+    text-align: center;
+}
+
+/*Style rules for nav content*/
+nav {
+    background-color: #47476b;
+}
+
+nav ul {
+  margin: 0;
+}
+
+nav li {
+    display: inline-block;
+    font-size: 1.5em;
+    font-family: Verdana, Arial, sans-serif;
+    font-weight: bold;
+}
+
+nav li a {
+  display: block;
+  color: #e3eaf8;
+  padding: 0.5em 2em;
+}
+
+/*Style rules for main content*/
+main {
+    padding: 2%;
+    font-family: Geneva, Arial, sans-serif;
+    overflow: auto;
+}
+
+main p {
+    font-size: 1.25em;
+}
+
+main h3 {
+    padding-top: 2%;
+    font-size: 2em;
+}
+
+/*Style rules for footer content*/
+footer {
     text-align: center;
     font-size: 0.85em;
     color: #47476b;
     padding: 1% 0;
     border-top: 3px solid #47476b;
-}body {
-    padding 2%;
-    background-color: #d1d1e0;
-} main {
-    padding: 2%;
-    font-family: Geneva, Arial, sans-serif;
-} header h1 {
-    font-size: 3em;
-    font-family: Georgia, Times, serif;
-    padding: 3%;
-    color: #47476b;
-} nav {
-    background-color: #47476b;
-} nav ul { margin: 0;} nav li {
-    display: block;
-    font-size: 1.5em; font-family: Verdana, Arial, sans-serif; font-weight: bold;
-} nav li a { display: block; color: #e3eaf8; padding: 0.5em 2em; }
-
-main p {
-    font-size: 1.25em;
+    float: left;
 }
-main h3 {
-    padding-top: 2%;
-    font-size: 2em;
+
+.link {
+  text-decoration: none
+}
+a:link {
+  text-decoration: none
 }
