--- a/analyze/css/styles.css
+++ b/analyze/css/styles.css
@@ -78,7 +78,7 @@ footer {
     color: #47476b;
     padding: 1% 0;
     border-top: 3px solid #47476b;
-    float: left;
+    clear: left;
 }
 
 .link {
